# aether-l052-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh
examples/blink/: CMakeLists.txt  build.sh  example.cmake  flash.sh  main.cpp
examples/button/: CMakeLists.txt  configure.sh  example.cmake  flash.sh  main.cpp
examples/sleep/: example.cmake  main.cpp  stm32l0xx_hal_conf.h
examples/sw63/: example.cmake  main.cpp  stm32l0xx_hal_conf.h
examples/sw63/app/: Animation.hpp  AnimationRunner.hpp  App.cpp  App.hpp  Battery.hpp  Display.cpp  Display.hpp  LocaleConfig.cpp  LocaleConfig.hpp  TimingsConfig.hpp
examples/sw63/app/animations/: AnimationCharge.cpp  AnimationCharge.hpp  AnimationIntro.cpp  AnimationTime.cpp  AnimationTime.hpp
examples/sw63/dev/: AdcInput.hpp  Battery.hpp  Display.cpp  Display.hpp  PwmBrightness.hpp  ShiftRegister.hpp  System.cpp  System.hpp
examples/sw63/lib/: math_utils.hpp
examples/sw63/ui/: Display.hpp
ld/: stm32l052k8u3.ld
